# crates/net/hlfs/Cargo.toml
[package]
name = "reth-hlfs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Implementation of archive block downloader"
authors = ["@wwwehr"]


[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread","macros","net","time","fs","sync","io-util"] }
bytes.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tracing.workspace = true
reth-tracing.workspace = true

[dev-dependencies]
rand.workspace = true
tempfile.workspace = true

